--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
