--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "redis": "^4.0.3",
     "sequelize": "^6.15.0"
   },
   "devDependencies": {
