--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: "3.9"
 
+networks:
+  app-tier:
+    driver: bridge
+
 services:
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    networks:
+      - app-tier
   api:
     build:
       context: ./backend
@@ -11,6 +21,11 @@ services:
     volumes:
       - ./backend:/var/www/api
     env_file: .env
+    networks:
+      - app-tier
+    depends_on:
+      - db
+      - redis
 
   db:
     platform: linux/x86_64
@@ -23,3 +38,5 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    networks:
+      - app-tier
