--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,13 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "redis": "^4.0.3",
-    "sequelize": "^6.15.0"
+    "sequelize": "^6.15.0",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
