--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ${API_PORT}:${API_PORT}
     volumes:
       - ./backend:/var/www/api
+      - "/var/www/api/node_modules"
     env_file: .env
     networks:
       - app-tier
