--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "http-errors": "^1.8.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "node-gyp": "^8.4.1",
     "nodemon": "^2.0.15",
     "redis": "^4.0.3",
     "sequelize": "^6.15.0",
