Add saving images
Additions


Fix


Fix


Fix


Fix


Fix env.example


Fix env.example


Fix


Fix

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,10 @@ APP_NAME=first-backend-project
 
 API_PORT=80
 
-DB_PORT=3306
-MYSQL_ROOT_PASS=
+MYSQL_PORT=3306
+MYSQL_ROOT_PASSWORD=
 MYSQL_USER=
-MYSQL_PASS=
-MYSQL_DB=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+
+AUTH_TOKEN_EXPIRATION_TIME=31536000
