--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,15 @@
-FROM node:16.13.2-alpine
+FROM --platform=amd64 node:16.13.2-alpine
 
 ARG STORAGE_DIR=/var/www/storage
 RUN mkdir -p ${STORAGE_DIR}
-RUN mkdir -p files/original
-RUN mkdir -p files/resized
-RUN cd files/resized
-RUN mkdir 256 512 1024 2048
+RUN mkdir -p ${STORAGE_DIR}/files/original
+RUN mkdir -p ${STORAGE_DIR}/files/resized
+WORKDIR ${STORAGE_DIR}/files/resized
+RUN pwd
+RUN mkdir -p 256 512 1024 2048
+RUN ls
+WORKDIR 256
+RUN pwd
 
 ARG APP_DIR=/var/www/api
 RUN mkdir -p ${APP_DIR}
