--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.15",
     "redis": "^4.0.3",
     "sequelize": "^6.15.0",
+    "sharp": "^0.30.1",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
